# routes/index.js
@@ -9,4 +9,6 @@ router.get('/', (req, res) => {
 
 router.use('/users', require('./users'));
 
+router.use('/products', require('./products'));
+
 module.exports = router;
